--- a/infrastructure/ec2/userdata.yaml
+++ b/infrastructure/ec2/userdata.yaml
@@ -24,13 +24,16 @@ write_files:
     kaggle datasets download -d paultimothymooney/chest-xray-pneumonia
     # github dataset download
     wget https://github.com/ieee8023/covid-chestxray-dataset/archive/refs/heads/master.zip
+    # virtual env setup
     export VIRTUALENVWRAPPER_PYTHON=/usr/bin/python3
     source ~/.local/bin/virtualenvwrapper.sh
     mkvirtualenv flannel
-    git clone https://github.com/mannbiher/DeepLearningForHealthCareProject.git
+    # download source repo
+    token=$(aws s3 cp s3://m-secrets-us-east-2/github_token - | cat)
+    git clone "https://${token}@github.com/mannbiher/DeepLearningForHealthCareProject.git"
     # copy dataset
-    unzip covid-chestxray-dataset-master.zip -d /home/ubuntu/DeepLearningForHealthCareProject/original_data/
-    unzip chest-xray-pneumonia.zip -d /home/ubuntu/DeepLearningForHealthCareProject/original_data/
+    unzip master.zip -d /home/ubuntu/DeepLearningForHealthCareProject/src/original_data/
+    unzip chest-xray-pneumonia.zip -d /home/ubuntu/DeepLearningForHealthCareProject/src/original_data/
     # cd DeepLearningForHealthCareProject/src
     # pip install -r requirements.txt
     # cd ../playground
@@ -45,6 +48,7 @@ write_files:
   
 
 runcmd:
+  # - sudo sysctl fs.inotify.max_user_watches=524288
   - sudo cp /root/clone.sh /home/ubuntu/clone.sh
   - sudo cp /root/env /home/ubuntu/env
   - [ bash, -c, "chmod +x /home/ubuntu/clone.sh" ]
