--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,5 +1,6 @@
-numpy
-torch
-torchvision
-matplotlib
-sklearn
+numpy==1.20.2
+torch==1.8.1
+torchvision==0.9.1
+matplotlib==3.4.0
+scikit-learn==0.24.1
+pandas==1.2.3
