--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,6 @@ dmypy.json
 # dataset stats
 standard_data_multiclass_0922_crossentropy/
 explore_version_03/
+
+# tensorflow board
+classifier_newset/
