Fix training to run

--- a/.gitignore
+++ b/.gitignore
@@ -147,6 +147,7 @@ dmypy.json
 
 # dataset stats
 standard_data_multiclass_0922_crossentropy/
+standard_data_patched_0922_crossentropy/
 explore_version_03/
 
 # tensorflow board
